# Gemma-Guardian

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  WRITEUP.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
agents/drone_agent/: __init__.py  __main__.py  action.py  buffered_publisher.py  c2a_inference.py  finding_buffer.py  link_state_monitor.py  localize.py  main.py  memory.py  perception.py  reasoning.py  redis_io.py  requirements.txt  runtime.py  standalone_test.py  state_translator.py  validation.py  zone_bounds.py  zone_provider.py
agents/egs_agent/: __init__.py  command_translator.py  coordinator.py  main.py  replanning.py  scenario_state.py  validation.py  validation_log_tail.py
agents/mesh_simulator/: __init__.py  main.py  range_filter.py  requirements.txt
docs/: 01-vision-and-pitch.md  02-hackathon-context.md  03-reference-paper.md  04-system-architecture.md  05-per-drone-agent.md  06-edge-ground-station.md  07-operator-interface.md  08-mesh-communication.md  09-function-calling-schema.md  10-validation-and-retry-loop.md  11-prompt-templates.md  12-fine-tuning-plan.md  13-gazebo-setup.md  13-runtime-setup.md  14-disaster-scene-design.md  15-multi-drone-spawning.md  16-mocks-and-cuts.md  17-feasibility-and-gates.md  18-team-roles.md  19-day-by-day-plan.md  20-integration-contracts.md  21-demo-storyboard.md  22-writeup-draft.md  22-writeup-outline.md  23-submission-checklist.md  STATUS.md  decisions.md  kaggle-submission-draft.md  kaggle-video-script.md  sim-live-run-notes.md  sim-reproduction.md  sim-resilience-run-notes.md
kaggle_work/: gemma4-xbd-vision-lora.py  kernel-metadata.json  model-metadata.json  preprocess.py  prompts.py  push_and_poll.sh
kaggle_work_c2a/: gemma4-victim-vision-lora.py  kernel-metadata.json  model-metadata.json  push_and_poll.sh
ml/: README.md  requirements.txt
ml/evaluation/: runners.py  (+3 more)
ollama/: Modelfile.e2b  Modelfile.e4b
scripts/: _check_wow_moment_ws.py  check_beat5.py  check_hybrid_demo.py  check_wow_moment.sh  dev_actions_logger.py  dev_command_translator.py  dev_fake_producers.py  dev_ollama_alias.py  fetch_disaster_fixtures.py  fetch_sard_candidates.py  fixtures_manifest.json  gen_topic_constants.py  launch_dashboard_dev.sh  launch_swarm.sh  measure_e4b_replan_latency.py  ollama_mock_server.py  pull_models.sh  run_beat5_capture.sh  run_dashboard_dev.sh  run_drone3_reliability.sh  run_full_demo.sh  run_hybrid_demo.sh  run_resilience_scenario.sh  runpod_bootstrap.sh  setup.sh  stop_demo.sh  sync_flutter_base_images.py  test_dev_command_translator.py  test_inject_command.py  test_inject_translation.py  test_translation.py  verify_demo_screenshot.py  ws_recorder.py
shared/: config.yaml  requirements.txt
sim/: ROADMAP.md  __init__.py  frame_server.py  geo.py  list_drones.py  manual_pilot.py  requirements.txt  scenario.py  scenario_origin.py  waypoint_runner.py
(+342 files in other folders)
